--- a/ExamenPatronesDiseno/ExamenPatronesDiseno.csproj
+++ b/ExamenPatronesDiseno/ExamenPatronesDiseno.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Client.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextReaderService.cs" />
     <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
